{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Ground",
            "id": "f0d6bf9c-644f-490c-81cf-821e7596e4dd",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c7f4b5b9-1413-469c-bd58-7bb3de2bfbbb",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "5d3fecfe-fbdb-4c90-aaac-f1625f73a5bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire_Start",
                    "type": "Button",
                    "id": "e82a2219-dbc5-4ee6-8cee-847bc525a273",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Fire_End",
                    "type": "Button",
                    "id": "ea6468d5-ac3e-41b4-be7c-6b6636162083",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a52bf68-0a73-4e24-878c-83978fa54ab8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cbfe216-18c0-481a-8026-038137b88bf1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a2ca769-2608-4211-ba88-61b63856af0b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire_Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2807dd1-0819-44e8-9283-1cc351569b29",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire_End",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}